# sentry-playground

./: .gitmodules  CMakeLists.txt  Main.qml  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qml.qrc  qtopenglwindow.cpp  qtopenglwindow.h  qtquickwindow.qml  qtvulkanwindow.cpp  qtvulkanwindow.h  qtwidgetswindow.cpp  qtwidgetswindow.h  qtwidgetswindow.ui  sentryapp.cpp  sentryapp.h  sentrycrash.cpp  sentrydebug.h  sentryplayground.cpp  sentryplayground.h  sentrywindow.cpp  sentrywindow.h  sentrywindow.ui
assets/: assets.qrc
src/: sentryapp.cpp  sentrycrash.h  sentrydebug.cpp  sentryfeedbackdialog.cpp  sentryfeedbackdialog.h  sentryplayground.cpp  sentrytrace.cpp  sentrytrace.h
